--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port = 9095
 
 #Database configuration/connection
 
-spring.datasource.url = jdbc:sqlserver://localhost:1433;databaseName=DemoUsers;integratedSecurity=false;encrypt=true;trustServerCertificate=true;
+spring.datasource.url = jdbc:sqlserver://localhost:1433;databaseName=AmsDB;integratedSecurity=false;encrypt=true;trustServerCertificate=true;
 spring.datasource.driver-class-name = com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 #Change this to your username and password
