--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,12 +5,12 @@ server.port = 9095
 
 #Database configuration/connection
 
-spring.datasource.url = jdbc:sqlserver://localhost:1433;databaseName=DemoUsers;integratedSecurity=false;encrypt=true;trustServerCertificate=true;
+spring.datasource.url = jdbc:sqlserver://localhost:1433;databaseName=AmsDB;integratedSecurity=false;encrypt=true;trustServerCertificate=true;
 spring.datasource.driver-class-name = com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 #Change this to your username and password
 spring.datasource.username = sa 
-spring.datasource.password = Test@123
+spring.datasource.password =Ravi*1548
 
 #jpa hibernate 
 
