user registration and usertype class updated

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,23 @@
 
+
+
+#server port number: http:/localhost:9094
+server.port=9095
+
+jwt.secret=nissan
+spring.main.allow-circular-references=true
+#Database connection
+#integratedSecurity=true means windows authentication
+#spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=DemoProfessorDB;integratedSecurity=true;encrypt=true;trustServerCertificate=true;
+#spring.daatasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver;
+
+#SQL Server authentication
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=AMSDatabase;integratedSecurity=false;encrypt=true;trustServerCertificate=true
+spring.datasource.username=sa
+spring.datasource.password=Ni$$an@00858
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+
+#jpa hibernate
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2008Dialect
