--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
 		<dependency>
 			<groupId>com.microsoft.sqlserver</groupId>
 			<artifactId>mssql-jdbc</artifactId>
-			<scope>runtime</scope>
+			<scope>7.4.4</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
